@@ -41,9 +41,10 @@ typedef bool (*DP_FloodFillShouldCancelFn)(void *user);
 DP_FloodFillResult
 DP_flood_fill(DP_CanvasState *cs, int x, int y, DP_UPixelFloat fill_color,
               double tolerance, int layer_id, int size, int gap, int expand,
-              int feather_radius, DP_ViewMode view_mode, int active_layer_id,
-              int active_frame_index, DP_Image **out_img, int *out_x,
-              int *out_y, DP_FloodFillShouldCancelFn should_cancel, void *user);
+              int feather_radius, bool continuous, DP_ViewMode view_mode,
+              int active_layer_id, int active_frame_index, DP_Image **out_img,
+              int *out_x, int *out_y, DP_FloodFillShouldCancelFn should_cancel,
+              void *user);
 
 
 #endif
